Revision history for File::DataClass

0.19.1    2013-05-02 15:11:09
          - Tidied exception class
          - Exception error type now a string

0.18.11   2013-05-01 21:44:47
          - Switched Simple for Base
          - Added tests for previous_exception
          - Renamed exception traits
          - Added previous_exception to F:DC:TraitFor::ThrowingExceptions
          - Updated README.md
          - Fixed spelling
          - Updated POD
          - Extracted F:DC:Exception::Simple
          - Extracted F:DC:TraitFor::PrependingErrorLeader
          - Tightened F:DC:Exception and Traits
          - Enabled automatic Rev keyword expansion
          - Switched from SVN to Git

0.17.450  2012-04-29
          - Enhanced Exception class

0.16.446  2012-04-24
          - Preserve execute permission during substitute method

0.16.445  2012-04-24
          - XML::Bare 0.48 reverts to old &amp; behaviour
          - Stopped HashMerge adding the name attribute

0.16.442  2013-04-15
          - Added Stauner d2777308-a5e7-11e2-83b7-87183f85d660 to list of
            CPAN Testers who should pack up and go home

0.16.438  2013-04-14
          - Split subclasses out into separate distributions
          - Updated inc::Bob to v1.11

0.15.434  2012-04-02
          - Updated inc::Bob to v1.9
          - Updated Moose and MooseX::ClassAttribute dependencies to aviod
            broken Moose 2.0800

0.15.431  2013-04-01
          - Updated inc::Bob to v1.8
          - Added OctalNum constraint
          - Fixed UTF-8 handling in File::UnixAuth

0.14.429  2013-01-07
          - Updated copyright year
          - Updated POD in IO.pm
          - Fixed bug in IO::rmdir. Now throws on error
          - Modernised t/10io.t

0.13.428  2013-01-06
          - Documented the limitations of MSWin32 and Cygwin platforms

0.13.427  2012-12-30
          - Binmode on by default on ntfs

0.13.424  2012-12-21
          - Started using Sub::Exporter::Progressive